Fixed calendar not showing first day and updated colors for gradients

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -351,6 +351,7 @@ h1 {
   margin: 0px 15px 0px 15px;
   height: 80%;
   border: 1px solid #262626;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
